--- a/des157/styles.css
+++ b/des157/styles.css
@@ -1,10 +1,90 @@
 body {
     max-width: 1366px;
     min-width: 900px;
-    list-style-type: none;
+    background-image: radial-gradient(#422619, black);
+}
+
+#name {
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+#name h1 {
+    /* display: inline; */
+    font-family: 'Playball', cursive;
+    font-size: 42px;
+    letter-spacing: 6px;
+    margin: 0;
+    color: #c4a886;
+}
+
+#name h2 {
+    /* display: inline; */
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 23px;
+    letter-spacing: 12px;
+    padding-left: 10px;
+    color: #d8cfad;
+}
+
+#name h3 {
+    font-family: 'Cinzel Decorative', cursive;    
+    font-size: 50px;
+    margin: 0;
+    letter-spacing: 5px;
+    color: #e4cfb9;
 }
 
 #banner {
     width: 1100px;
     height: 250px;
+}
+
+#container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+section h2 {
+    font-family: 'Passion One', cursive;
+    letter-spacing: 5px;
+    font-weight: 10;
+    font-size: 26px;
+    color: #6d5343;
+}
+
+section ul{
+    text-align: left;
+    list-style-type: none;
+    padding-left: 0px;
+}
+
+section ul li{
+    text-align: left;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 22px;
+    font-weight: 1000;
+    letter-spacing: 2px;
+    padding-top: 8px; 
+    padding-bottom: 8px;
+    color: #ac9c93;
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* margin-top: 20px;
+    margin-bottom: 50px; */
+}
+
+footer a {
+    padding: 50px;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: 'Passion One', cursive;
+    letter-spacing: 5px;
+    color: rgb(73, 52, 49);
 }
