--- a/des157/styles.css
+++ b/des157/styles.css
@@ -2,6 +2,9 @@ body {
     max-width: 1366px;
     min-width: 900px;
     background-image: radial-gradient(#422619, black);
+    margin: auto;
+    display: flexbox;
+    align-content: center;
 }
 
 #name {
@@ -15,7 +18,6 @@ body {
     font-family: 'Playball', cursive;
     font-size: 37px;
     letter-spacing: 6px;
-    margin: 0;
     color: #c4a886;
 }
 
