--- a/des157/styles.css
+++ b/des157/styles.css
@@ -9,6 +9,28 @@ body {
     align-content: center; */
 }
 
+/* spotlight */
+#spotlight {
+    width: 50px;
+    height: 50px;
+    border-radius: 90%;
+    background-color: rgba(250, 250, 216, 0.781);
+    position: absolute;
+    animation-name: spot;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-delay: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes spot{
+    0% {opacity: 0%;  left: 0px; top: 400px;}
+    /* 25% {width: 100px; height: 100px; opacity: 25%; left: 700px; top: 500px;} */
+    50% {width: 200px; height: 200px; opacity: 75%; left: 700px; top: 400px;}
+    /* 75% {width: 100px; height: 100px; opacity: 25%; left: 900px; top: 500px;} */
+    100% {opacity: 0%; left: 1600px; top: 400px;}
+}
 /* titles */
 
 #name {
