--- a/des157/styles.css
+++ b/des157/styles.css
@@ -10,11 +10,12 @@ body {
 }
 
 /* spotlight */
-#spotlight {
+#spotlight1 {
     width: 50px;
     height: 50px;
     border-radius: 90%;
-    background-color: rgba(250, 250, 216, 0.781);
+    background-image: radial-gradient(farthest-corner at 50% 50%, rgba(250, 250, 216, 0.781), #0c0705e5);
+    /* background-color: rgba(250, 250, 216, 0.781); */
     position: absolute;
     animation-name: spot;
     animation-duration: 10s;
@@ -31,6 +32,30 @@ body {
     /* 75% {width: 100px; height: 100px; opacity: 25%; left: 900px; top: 500px;} */
     100% {opacity: 0%; left: 1600px; top: 400px;}
 }
+
+#spotlight2 {
+    width: 50px;
+    height: 50px;
+    border-radius: 90%;
+    background-image: radial-gradient(rgba(250, 250, 216, 0.781), #0c0705e5);
+    /* background-color: rgba(250, 250, 216, 0.781); */
+    position: absolute;
+    animation-name: spot2;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-delay: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes spot2{
+    0% {opacity: 0%;  left: 1600px; top: 400px;}
+    /* 25% {width: 100px; height: 100px; opacity: 25%; left: 700px; top: 500px;} */
+    50% {width: 200px; height: 200px; opacity: 75%; left: 700px; top: 400px;}
+    /* 75% {width: 100px; height: 100px; opacity: 25%; left: 900px; top: 500px;} */
+    100% {opacity: 0%; left: 0px; top: 400px;}
+}
+
 /* titles */
 
 #name {
