--- a/des157/styles.css
+++ b/des157/styles.css
@@ -7,6 +7,7 @@ body {
     margin: auto;
     /* display: flexbox;
     align-content: center; */
+    position: relative;
 }
 
 /* spotlight */
@@ -23,6 +24,7 @@ body {
     animation-delay: 2s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
+    position: absolute;
 }
 
 @keyframes spot{
@@ -46,6 +48,7 @@ body {
     animation-delay: 2s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
+    position: absolute;
 }
 
 @keyframes spot2{
