--- a/des157/studio1/styles.css
+++ b/des157/studio1/styles.css
@@ -1,51 +1,88 @@
-body {
-    font-family: arial;
-    color: #333;
-    padding-top: 200px;
-    line-height: 1.4em;
+#container {
+    background-color: rgb(255, 252, 249);
+    /* background-color: #FFFCBB; */
     max-width: 1366px;
     min-width: 900px;
+    height: 100vh;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 30% 60% 10%;
+}
+
+header {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    justify-self: start;
+    align-self: end;
+
+    font-family: 'Original Surfer', cursive;
+    color: #2fc0f9;
 }
 
 main {
-    max-width: 600px;
-    padding: 20px;
-    margin: auto;
-    background-color: aliceblue;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    justify-self: start;
+    align-self: center;
 }
 
-.hidden {
-    display: none;
+#images {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 4;
+    justify-self: center;
+    align-self: center;
 }
 
-.showing {
-    display: block;
+img {
+    width: 30%;
 }
 
-#overlay {
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.5);
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+/* forms' style */
+label {
+    font-size: 20px;
+    font-family: 'Comfortaa', cursive;
+    color: rgb(151, 149, 149);
+    padding-left: 8px;
 }
 
-#overlay article {
-    box-sizing: border-box;
-    background-color: #fff;
-    padding: 20px;
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    overflow-y: scroll;
+select {
+    width: 100%;
+    margin: 8px;
+    padding: 4px;
+    border: none;
+    border-radius: 4px;
+    background-color: rgb(235, 235, 237);
+    font-family: 'Comfortaa', cursive;
+    color: rgb(151, 149, 149);
+}
+
+/* button */
+.open {
+    font-family: 'Original Surfer', cursive;
+    font-size: 16px;
+    width: 50%;
+    margin: 8px;
+    padding: 6px;
+    color: #ffffff;
+    background-color: #74d5fc;
+    border-radius: 5px;
+
 }
 
 footer {
-    max-width: 600px;
-    padding-bottom: 20px;
-    margin: auto;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
+}
+
+a {
+    text-decoration: none;
 }
