--- a/des157/studio1/styles.css
+++ b/des157/studio1/styles.css
@@ -1,47 +1,33 @@
-#container {
+.container {
     background-color: rgb(255, 252, 249);
-    /* background-color: #FFFCBB; */
-    max-width: 1366px;
-    min-width: 900px;
-    height: 100vh;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 30% 60% 10%;
+    display: flex;
+
 }
 
 header {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    justify-self: start;
-    align-self: end;
+    flex: 100%;
 
     font-family: 'Original Surfer', cursive;
     color: #2fc0f9;
+    
 }
 
 main {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    justify-self: start;
-    align-self: center;
+    flex: 50%;
+    align-items: center;
+    justify-content: center;
 }
 
 #images {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 4;
-    justify-self: center;
-    align-self: center;
+    flex: 50%;
 }
 
 img {
     width: 30%;
+}
+
+.hidden {
+    display: none;
 }
 
 /* forms' style */
@@ -77,12 +63,11 @@ select {
 }
 
 footer {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 4;
+    flex: 100%;
 }
 
 a {
     text-decoration: none;
+    font-family: 'Comfortaa', cursive;
+
 }
