--- a/des157/lj/styles.css
+++ b/des157/lj/styles.css
@@ -4,17 +4,38 @@ body {
     max-width: 1366px;
     min-width: 900px;
     background-color: #0c0705f6;
+    background-image: url("pictures/background.jpg");
+    background-repeat: repeat;
     margin: auto;
 }
 
 /* set header / banner in the middle */
+
 header {
     display: flex;
+    margin: auto;
+    padding-top: 100px;
+    /* width: 683px;
+    height: 400px; */
     justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    /* text style */
     font-family: 'Cinzel Decorative', cursive;    
-    font-size: 20px;
+    font-size: 60px;
     letter-spacing: 5px;
-    color: #b4a18a;
+    line-height: 90px;
+    text-align: center;
+    color: #d8b279;
+
+    /* "graphic" style */
+    border: solid rgb(19, 12, 8);
+
+    padding: 40px 60px 40px 60px;
+    border-width: 15px 80px 15px 80px;
+    background-color: #7c71665d;
 }
 
 /* make all the <article> posts flex in the middle of the page no matter how the viewport changed */
@@ -30,6 +51,48 @@ article {
     display: block;
     width: 700px;
 }
+
+/* May 6th picture */
+.maySix figure {
+    display: block;
+    width: 562.5px;
+    height: 403px;
+    margin: auto;
+}
+
+figcaption {
+    text-align: center;
+    font-size: larger;
+    font-style: oblique;
+    color: #5f5548;
+}
+
+.maySix figure img {
+    padding: 25px 0 25px 0;
+    width: 562.5px;
+    height: 403px;
+    filter: sepia(50%) brightness(50%);
+}
+
+/* separation between each article */
+.reel {
+    margin: auto;
+    justify-content: center;
+}
+
+#reel img {
+    width: 80px;
+    height: 80px;
+    animation: rotation 10s infinite linear;
+    padding: 50px 20px 10px 35px;
+    opacity: 50%;
+}
+
+@keyframes rotation {
+    from {transform: rotate(0deg);}
+    to {transform: rotate(359deg);}
+}
+
 
 /* contents' style */
 
@@ -67,14 +130,34 @@ p.link {
     color: #5f5548;
 }
 
+a {
+    text-decoration: underline;
+    color: #5f5548c9;
+}
+
+a:hover {
+    font-weight: bolder;
+}
+
 
 /* footer */
 footer {
+    /* display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-self: center; */
+    padding: 50px 20px 0 0;
+
+    /* border-style: solid none none none; */
+
+}
+
+ul {
+    text-decoration: none;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-self: center;
-    padding-top: 50px;
 }
 
 footer a {
