--- a/des157/studio2/style.css
+++ b/des157/studio2/style.css
@@ -77,58 +77,58 @@ a {
 }
 
 #topTwo {
-    top: 0;
-    left: 20%;
+    top: 15%;
+    left: 15%;
 }
 
 #topThree {
-    top: 0;
-    left: 40%;
+    top: 15%;
+    left: 33%;
 }
 
 #topFour {
-    top: 0;
-    left: 60%;
+    top: 25%;
+    left: 55%;
 }
 
 #topFive {
-    top: 0;
-    left: 80%;
+    top: 10%;
+    left: 83%;
 }
 
 /* bottom pictures */
 #bottomOne {
-    bottom: 0;
+    bottom: 5%;
     left: 0;
 }
 
 #bottomTwo {
-    bottom: 0;
+    bottom: 5%;
     left: 10%;
 }
 
 #bottomThree {
-    bottom: 0;
-    left: 20%;
+    bottom: 15%;
+    left: 18%;
 }
 
 #bottomFour {
-    bottom: 0;
-    left: 50%;
+    bottom: 15%;
+    left: 45%;
 }
 
 #bottomFive {
-    bottom: 0;
-    left: 70%;
+    bottom: 13%;
+    left: 66%;
 }
 
 #bottomSix {
-    bottom: 0;
-    left: 85%;
+    bottom: 13%;
+    left: 77%;
 }
 
 #bottomSeven {
-    bottom: 0;
+    bottom: 13%;
     right: 0;
 }
 
