--- a/des157/lj/styles.css
+++ b/des157/lj/styles.css
@@ -120,7 +120,7 @@ p {
     font-size: 20px;
     font-family:'Titillium Web', sans-serif;
     letter-spacing: 1px;
-    color: #8f806e;
+    color: rgb(161, 153, 144);
     text-align: justify;
     line-height: 35px;
 }
