--- a/des157/studio3/styles.css
+++ b/des157/studio3/styles.css
@@ -2,7 +2,7 @@
 /* buttons, players, numbers, message of points status' position: absolute to the container */
 #wrap {
     max-width: 1366px;
-    min-width: 900px;
+    min-width: 1200px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -17,6 +17,53 @@ header {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+}
+
+footer ul {
+    list-style-type: none;
+}
+
+#footerWrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/* credit overlay */
+.hidden {
+    visibility: hidden;
+    opacity: 0;
+}
+
+.showing {
+    visibility: visible;
+    opacity: 1;
+}
+
+#overlay {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    transition-property: visibility, opacity;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+}
+
+#overlay article {
+    box-sizing: border-box;
+    background-color: #fff;
+    padding: 20px;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow-y: scroll;
 }
 
 
