--- a/des157/final/proto/style.css
+++ b/des157/final/proto/style.css
@@ -141,6 +141,14 @@ header {
     color: #eed7c0;
 }
 
+.years:hover {
+    font-size: 90px;
+    color: #eed7c0;
+    transition-property: font-size;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+}
+
 /* each years' images */
 #year1, #year2, #year3, #year4, #year5, #year6, #year7, #year8 {
     background-position: center;
