--- a/des157/lj/styles.css
+++ b/des157/lj/styles.css
@@ -118,11 +118,11 @@ h3 {
 
 /* p: general setting for both link and content */
 p {
-    font-size: 25px;
+    font-size: 24px;
     font-family:'Titillium Web', sans-serif;
     letter-spacing: 3px;
     color: rgb(161, 153, 144);
-    text-align: justify;
+    /* text-align: justify; */
     line-height: 42px;
 }
 
