--- a/des157/final/style.css
+++ b/des157/final/style.css
@@ -157,13 +157,9 @@ header h2 {
     color: #e3d0be;
 }
 
-/* .years:hover {
-    font-size: 90px;
-    color: #eed7c0;
-    transition-property: font-size;
-    transition-duration: 1s;
-    transition-timing-function: ease;
-} */
+.years:hover {
+    cursor: context-menu;
+}
 
 /* each years' images */
 #year1, #year2, #year3, #year4, #year5, #year6, #year7, #year8 {
